# ioctl

./: .gitignore  README.md
frontendr/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.paths.json
frontendr/src/components/: Login.tsx  Register.tsx
frontendr/src/components/common/: LeftPane.tsx  MainPane.tsx  Menu.tsx  RightPane.tsx  UserDetail.tsx
frontendr/src/components/layout/: Navbar.tsx
frontendr/src/components/login/: Login.tsx
frontendr/src/context/: AuthProvider.tsx  MenuProvider.tsx  SettingsProvider.tsx
frontendr/src/hooks/: useAuth.ts  useAuthenticated.ts  useAxiosPrivate.ts  useProfile.ts  useRefreshToken.ts  useToken.ts  useUser.ts
frontendr/src/interfaces/: index.ts
frontendr/src/models/: index.ts
frontendr/src/pages/: _app.tsx  _document.tsx  index.tsx  landing.tsx  login.tsx  profile.tsx  settings.tsx  users.tsx
frontendr/src/services/: authService.ts  authenticationService.ts  userService.ts  users.ts
frontendr/src/styles/: globals.css
frontendr/src/utils/: axios.ts  constants.ts  fetchWrapper.ts
scripts/: init.sh  server_env.sh  start.sh
server/ioctl/: .env  pyproject.toml
server/ioctl/alembic/: env.py
server/ioctl/alembic/versions/: 0f61f2589652_adding_role_and_user_role.py  2aec72975d22_remove_item_model.py  4774f1994be8_initial_data.py  4c35a8333dc7_create_token_model.py  5277f987c85a_initial_data.py  58385e58fadd_add_hunter_type.py  85f0256bb078_add_token_to_user.py  8ad4cc7f0f67_add_teams_and_organization.py  9af6466e7c20_initial_model.py  9f1dad681e28_initial_schema.py  c603238d0672_add_customer_model.py  d044ba419295_remove_unncesary_indexes.py  ebec570a7f9a_initial_script_user_model.py  f2ccd4a1dd6e_initial_schema.py
server/ioctl/app/: initial_data.py  main.py  utils.py
server/ioctl/app/api/: deps.py
server/ioctl/app/api/api_v1/: api.py
server/ioctl/app/api/api_v1/endpoints/: auth.py  login.py  users.py
server/ioctl/app/core/: config.py  role_checker.py  security.py
server/ioctl/app/crud/: __init__.py  base.py  crud_clan.py  crud_hunter.py  crud_item.py  crud_mission.py  crud_organization.py  crud_role.py  crud_squad.py  crud_team.py  crud_token.py  crud_user.py
server/ioctl/app/db/: base.py  base_class.py  init_db.py  session.py
server/ioctl/app/models/: __init__.py  clan.py  customer.py  hunter.py  item.py  mission.py  organization.py  quest.py  role.py  squad.py  team.py  token.py  user.py
server/ioctl/app/schemas/: __init__.py  clan.py  hunter.py  item.py  mission.py  organization.py  project.py  role.py  squad.py  team.py  token.py  user.py
server/ioctl/app/tests/: test_ioctl.py
server/ioctl/scripts/: start.sh
(+20 files in other folders)
