[tool.poetry]
name = "ioctl"
version = "0.1.0"
description = ""
authors = ["amr <amr@msi-amr>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.4.2"
email-validator = "^1.0.5"
gunicorn = "^20.0.4"
fastapi = "*"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
pydantic = "^1.4"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
pytest = "^5.4.1"
sqlalchemy = "^1.3.16"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
sqlalchemy-stubs = "^0.3"
flake8 = "^3.7.9"
python-dotenv = "0.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
