[tool.poetry]
name = "ioctl"
version = "0.1.0"
description = ""
authors = ["amr <amr@msi-amr>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.4.2"
celery = "^4.4.2"
emails = "^0.6"
email-validator = "^1.0.5"
gunicorn = "^20.0.4"
fastapi = "^0.70"
jinja2 = "^2.11.2"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
psycopg2-binary = "^2.8.5"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
python-multipart = "^0.0.5"
pytest = "^5.4.1"
raven = "^6.10.0"
requests = "^2.23.0"
sqlalchemy = "^1.3.16"
tenacity = "^6.1.0"
uvicorn = "0.19.0"
SQLAlchemy = "^1.4.42"
fastapi-jwt-auth = "^0.5.0"
black = "^22.10.0"

[tool.poetry.dev-dependencies]
typed-ast = "^1.5.4"
mypy = "^0.991"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
sqlalchemy-stubs = "^0.3"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
